@@ -167,6 +167,18 @@
                         </configuration>
                         <executions>
                             <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
                                 <id>sift</id>
                                 <goals>
                                     <goal>exec</goal>
@@ -232,6 +244,19 @@
                             <skip>false</skip>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>sift</id>
                                 <goals>
@@ -348,6 +373,21 @@
                             <skip>false</skip>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>sift</id>
                                 <goals>
